fix: Nav items hiding on smaller devices

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -48,11 +48,6 @@
   margin-block: 2rem;
 }
 
-.nav__list li:hover {
-  color: var(--clr-dark-violet);
-  cursor: pointer;
-}
-
 .nav__line {
   width: 90%;
   height: 0.1px;
@@ -63,6 +58,11 @@
 
 .btn {
   width: 90%;
+}
+
+.nav__list li:active {
+  color: var(--clr-grayish-violet);
+  cursor: pointer;
 }
 
 @media (min-width: 900px) {
@@ -97,6 +97,11 @@
   .nav__list {
     gap: 1.5rem;
     margin-block: 0;
+  }
+
+  .nav__list li:hover {
+    color: var(--clr-dark-violet);
+    cursor: pointer;
   }
 
   .btn {
